--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,4 +20,5 @@ jobs:
         pip install pylint pytest mock requests ccxt
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint --jobs=0 --timeout=2 $(git ls-files '*.py')
+      timeout-minutes: 10
